Bugfix for files containing 256 unique characters